--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Understanding Typescript</title>
-    <script src="app.js"></script>
-    <script src="analytics.js"></script>
+
 </head>
 
 <body>
+    <button>Click</button>
 
+    <script src="./dist/app.js"></script>
+    <script src="./dist/analytics/analytics.js"></script>
 </body>
 
 </html>
