--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Understanding Typescript</title>
-    <script src="app.js"></script>
+
 </head>
 
 <body>
-    <input type="text" id="user" />
+    <p>Decorators</p>
+    <div id="app"></div>
+    <script src="app.js"></script>
 </body>
 
 </html>
